test/SILOptimizer/init_static_globals_crash.code
// RUN: %target-language-frontend -parse-as-library -emit-sil %s -o /dev/null -verify

// Don't crash in the initializeStaticGlobalsPass when the global is not valid.

immutable f: @convention(c) () -> Void = { // expected-error {{a C function pointer cannot be formed from a closure that captures generic parameters}}
    fn g<T>(_ x: T) {}
}
